--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-vue-3": "^0.3.12",
     "geist": "^1.3.1",
     "lucide-vue-next": "^0.294.0",
+    "mitt": "^3.0.1",
     "pinia": "^2.3.1",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
